--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -6,6 +6,10 @@
       <div class="article-metadata">
         <a class="mr-2" href="#">{{ post.author.username }}</a>
         <small class="text-muted">{{ post.date_posted.strftime('%d-%m-%Y') }}</small>
+        {% if post.author == current_user %}
+          <a class="btn btn-secondary btn-sm m-1" href="{{ url_for('update_post', post_id = post.id) }}">Update</a>
+          <!-- <button type="button" class="btn btn-danger btn-sm m-1">Delete</button> -->
+        {% endif %}
       </div>
       <h2><a class="article-title">{{ post.title }}</a></h2>
       <p class="article-content">{{ post.content }}</p>
